jquery-ui.1.6.smoothness.css
/*
 * jQuery UI screen structure and presentation
 * This CSS file was generated by ThemeRoller, a Filament Group Project for jQuery UI
 * Author: Scott Jehl, scott@filamentgroup.com, http://www.filamentgroup.com
 * Visit ThemeRoller.com
*/

/*
 * Note: If your ThemeRoller settings have a font size set in ems, your components will scale according to their parent element's font size.
 * As a rule of thumb, set your body's font size to 62.5% to make 1em = 10px.
 * body {font-size: 62.5%;}
*/



/*UI accordion*/
.ui-accordion {
	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
	font-family: Verdana,Arial,sans-serif;
	font-size: 1.1em;
	border-bottom: 1px solid #d3d3d3;
}
.ui-accordion-group {
	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
	border: 1px solid #d3d3d3;
	border-bottom: none;
}
.ui-accordion-header {
	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
	cursor: pointer;
	background: #e6e6e6 url(images/e6e6e6_40x100_textures_02_glass_75.png) 0 50% repeat-x;
}
.ui-accordion-header a {
	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
	display: block;
	font-size: 1em;
	font-weight: normal;
	text-decoration: none;
	padding: .5em .5em .5em 1.7em;
	color: #555555;
	background: url(images/888888_7x7_arrow_right.gif) .5em 50% no-repeat;
}
.ui-accordion-header a:hover {
	background: url(images/454545_7x7_arrow_right.gif) .5em 50% no-repeat;
	color: #212121;
}
.ui-accordion-header:hover {
	background: #dadada url(images/dadada_40x100_textures_02_glass_75.png) 0 50% repeat-x;
	color: #212121;
}
.selected .ui-accordion-header, .selected .ui-accordion-header:hover {
	background: #ffffff url(images/ffffff_40x100_textures_02_glass_65.png) 0 50% repeat-x;
}
.selected .ui-accordion-header a, .selected .ui-accordion-header a:hover {
	color: #212121;
	background: url(images/454545_7x7_arrow_down.gif) .5em 50% no-repeat;
}
.ui-accordion-content {
	background: #ffffff url(images/ffffff_40x100_textures_01_flat_75.png) 0 0 repeat-x;
	color: #222222;
	font-size: 1em;
}
.ui-accordion-content p {
	padding: 1em 1.7em 0.6em;
}






/*UI tabs*/
.ui-tabs-nav {
	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
	font-family: Verdana,Arial,sans-serif;
	font-size: 1.1em;
	float: left;
	position: relative;
	z-index: 1;
	border-right: 1px solid #d3d3d3;
	bottom: -1px;
}
.ui-tabs-nav ul {
	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
}
.ui-tabs-nav li {
	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
	float: left;
	border: 1px solid #d3d3d3;
	border-right: none;
}
.ui-tabs-nav li a {
	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
	float: left;
	font-size: 1em;
	font-weight: normal;
	text-decoration: none;
	padding: .5em 1.7em;
	color: #555555;
	background: #e6e6e6 url(images/e6e6e6_40x100_textures_02_glass_75.png) 0 50% repeat-x;
}
.ui-tabs-nav li a:hover {
	background: #dadada url(images/dadada_40x100_textures_02_glass_75.png) 0 50% repeat-x;
	color: #212121;
}
.ui-tabs-nav li.ui-tabs-selected {
	border-bottom-color: #ffffff;
}
.ui-tabs-nav li.ui-tabs-selected a, .ui-tabs-nav li.ui-tabs-selected a:hover {
	background: #ffffff url(images/ffffff_40x100_textures_02_glass_65.png) 0 50% repeat-x;
	color: #212121;
}
.ui-tabs-panel {
	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
	font-family: Verdana,Arial,sans-serif;
	clear:left;
	border: 1px solid #d3d3d3;
	background: #ffffff url(images/ffffff_40x100_textures_01_flat_75.png) 0 0 repeat-x;
	color: #222222;
	padding: 1.5em 1.7em;	
	font-size: 1.1em;
}
.ui-tabs-hide {
	display: none;/* for accessible hiding: position: absolute; left: -99999999px*/;
}





/*slider*/
.ui-slider {
	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
	font-family: Verdana,Arial,sans-serif;
	font-size: 1.1em;
	background: #ffffff url(images/ffffff_40x100_textures_01_flat_75.png) 0 0 repeat-x;
	border: 1px solid #aaaaaa;
	height: .8em;
	position: relative;
}
.ui-slider-handle {
	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
	position: absolute;
	z-index: 2;
	top: -3px;
	width: 1.2em;
	height: 1.2em;
	background: #e6e6e6 url(images/e6e6e6_40x100_textures_02_glass_75.png) 0 50% repeat-x;
	border: 1px solid #d3d3d3;
}
.ui-slider-handle:hover {
	background: #dadada url(images/dadada_40x100_textures_02_glass_75.png) 0 50% repeat-x;
	border: 1px solid #999999;
}
.ui-slider-handle-active, .ui-slider-handle-active:hover {
	background: #ffffff url(images/ffffff_40x100_textures_02_glass_65.png) 0 50% repeat-x;
	border: 1px solid #aaaaaa;
}
.ui-slider-range {
	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
	height: .8em;
	background: #dadada url(images/dadada_40x100_textures_02_glass_75.png) 0 50% repeat-x;
	position: absolute;
	border: 1px solid #d3d3d3;
	border-left: 0;
	border-right: 0;
	top: -1px;
	z-index: 1;
	opacity:.7;
	filter:Alpha(Opacity=70);
}
/* ... */

